Fixed the hyperlink alignment on venues.html!!!

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ nav li {
 a {
   color: #335E75;
   font-weight: bold;
+  display: inline-flex;
 }
 
 nav a {
@@ -140,12 +141,10 @@ nav a:focus {
 
 p {
   font-size: 1em;
-  display: flex;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 5em;
   margin-inline-end: 5em;
-  justify-content: flex-start;
 }
 
 footer {
